--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <header class="nav">
+    <header class="nav sticky">
         <nav>
             <a class="nav-link" href="#contact">CONTACT</a>
             <a class="nav-link" href="#projects">WORK</a>
@@ -23,21 +23,21 @@
 
         <section class="section">
             <h3>These are some of my projects</h3>
-            <section>
+            <section class="project">
                 <a href="https://annieeasley.netlify.app/"><img src="https://raw.githubusercontent.com/ritaxcorreia/tribute-page/master/annie-easley.png" alt="Annie Easley Tribute Page"></a>
                 <p><a href="https://annieeasley.netlify.app/">Tribute Page</a></p>
             </section>
-            <section>
+            <section class="project">
                 <a href="https://codepen.io/ritacorreia/full/oNbBEmp"><img src="https://raw.githubusercontent.com/ritaxcorreia/Tech-documentation-page/master/tech-doc-page2.png" alt="Technical Documentation Page"></a>
                 <p><a href="https://codepen.io/ritacorreia/full/oNbBEmp">Technical Documentation Page</a></p>
             </section>
 
-            <section>
+            <section class="project">
                 <a href="https://codepen.io/ritacorreia/full/rNxjaLo"><img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco_page.png" alt="Product Landing Page"></a>
                 <p><a href="https://codepen.io/ritacorreia/full/rNxjaLo">Product Landing Page</a></p>
             </section>
 
-            <section>
+            <section class="project">
                 <a href="https://codepen.io/ritacorreia/full/WNroWPa"><img src="https://raw.githubusercontent.com/ritaxcorreia/survey-form-page/master/survey-form.png" alt="Survey Form Page"></a>
                 <p><a href="https://codepen.io/ritacorreia/full/WNroWPa">Survey Form Page</a></p>
             </section>
