--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="nav sticky">
         <nav>
             <a class="nav-link" href="#contact">CONTACT</a>
-            <a class="nav-link" href="#projects">WORK</a>
+            <a class="nav-link" href="#project-area">WORK</a>
             <a class="nav-link" href="#welcome-section">ABOUT</a>
         </nav>
     </header>
@@ -21,25 +21,29 @@
             <p>After 10 years in project management, I'm teaching myself how to code. Here's a collection of my very first projects, done as part of a coding bootcamp taken in June 2020.</p>
         </section>
 
-        <section class="section">
+        <section id="project-area" class="section">
             <h3>These are some of my projects</h3>
-            <section class="project">
-                <a href="https://annieeasley.netlify.app/"><img src="https://raw.githubusercontent.com/ritaxcorreia/tribute-page/master/annie-easley.png" alt="Annie Easley Tribute Page"></a>
-                <p><a href="https://annieeasley.netlify.app/">Tribute Page</a></p>
-            </section>
-            <section class="project">
-                <a href="https://codepen.io/ritacorreia/full/oNbBEmp"><img src="https://raw.githubusercontent.com/ritaxcorreia/Tech-documentation-page/master/tech-doc-page2.png" alt="Technical Documentation Page"></a>
-                <p><a href="https://codepen.io/ritacorreia/full/oNbBEmp">Technical Documentation Page</a></p>
-            </section>
+            <section class="project-container">
 
-            <section class="project">
-                <a href="https://codepen.io/ritacorreia/full/rNxjaLo"><img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco_page.png" alt="Product Landing Page"></a>
-                <p><a href="https://codepen.io/ritacorreia/full/rNxjaLo">Product Landing Page</a></p>
-            </section>
+                <section class="project">
+                    <a href="https://annieeasley.netlify.app/"><img src="https://raw.githubusercontent.com/ritaxcorreia/tribute-page/master/annie-easley.png" alt="Annie Easley Tribute Page"></a>
+                    <p><a href="https://annieeasley.netlify.app/">Tribute Page</a></p>
+                </section>
 
-            <section class="project">
-                <a href="https://codepen.io/ritacorreia/full/WNroWPa"><img src="https://raw.githubusercontent.com/ritaxcorreia/survey-form-page/master/survey-form.png" alt="Survey Form Page"></a>
-                <p><a href="https://codepen.io/ritacorreia/full/WNroWPa">Survey Form Page</a></p>
+                <section class="project">
+                    <a href="https://codepen.io/ritacorreia/full/oNbBEmp"><img src="https://raw.githubusercontent.com/ritaxcorreia/Tech-documentation-page/master/tech-doc-page2.png" alt="Technical Documentation Page"></a>
+                    <p><a href="https://codepen.io/ritacorreia/full/oNbBEmp">Technical Documentation Page</a></p>
+                </section>
+
+                <section class="project">
+                    <a href="https://codepen.io/ritacorreia/full/rNxjaLo"><img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco_page.png" alt="Product Landing Page"></a>
+                    <p><a href="https://codepen.io/ritacorreia/full/rNxjaLo">Product Landing Page</a></p>
+                </section>
+
+                <section class="project">
+                    <a href="https://codepen.io/ritacorreia/full/WNroWPa"><img src="https://raw.githubusercontent.com/ritaxcorreia/survey-form-page/master/survey-form.png" alt="Survey Form Page"></a>
+                    <p><a href="https://codepen.io/ritacorreia/full/WNroWPa">Survey Form Page</a></p>
+                </section>
             </section>
         </section>
 
