--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
 
         <section id="welcome-section" class="section">
-            <h1>Hey, I'm Rita</h1>
+            <h1>Hey there, I'm Rita</h1>
             <h2>a web developer in the making</h2>
             <p>After 10 years in project management, I'm teaching myself how to code. Here's a collection of my very first projects, done as part of a coding bootcamp taken in June 2020.</p>
         </section>
@@ -27,22 +27,28 @@
 
                 <section class="project">
                     <a href="https://annieeasley.netlify.app/"><img src="https://raw.githubusercontent.com/ritaxcorreia/tribute-page/master/annie-easley.png" alt="Annie Easley Tribute Page"></a>
-                    <p><a href="https://annieeasley.netlify.app/">Tribute Page</a></p>
+                    <p><a class="project-text-link" href="https://annieeasley.netlify.app/"><strong>Tribute
+								Page</strong></a>
+                    </p>
                 </section>
 
                 <section class="project">
                     <a href="https://codepen.io/ritacorreia/full/oNbBEmp"><img src="https://raw.githubusercontent.com/ritaxcorreia/Tech-documentation-page/master/tech-doc-page2.png" alt="Technical Documentation Page"></a>
-                    <p><a href="https://codepen.io/ritacorreia/full/oNbBEmp">Technical Documentation Page</a></p>
+                    <p><a class="project-text-link" href="https://codepen.io/ritacorreia/full/oNbBEmp"><strong>Technical
+								Documentation Page</strong></a></p>
                 </section>
 
                 <section class="project">
                     <a href="https://codepen.io/ritacorreia/full/rNxjaLo"><img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco_page.png" alt="Product Landing Page"></a>
-                    <p><a href="https://codepen.io/ritacorreia/full/rNxjaLo">Product Landing Page</a></p>
+                    <p><a class="project-text-link" href="https://codepen.io/ritacorreia/full/rNxjaLo"><strong>Product
+								Landing Page</strong></a></p>
                 </section>
 
                 <section class="project">
                     <a href="https://codepen.io/ritacorreia/full/WNroWPa"><img src="https://raw.githubusercontent.com/ritaxcorreia/survey-form-page/master/survey-form.png" alt="Survey Form Page"></a>
-                    <p><a href="https://codepen.io/ritacorreia/full/WNroWPa">Survey Form Page</a></p>
+                    <p><a class="project-text-link" href="https://codepen.io/ritacorreia/full/WNroWPa"><strong>Survey
+								Form
+								Page</strong></a></p>
                 </section>
             </section>
         </section>
@@ -50,8 +56,10 @@
         <section id="contact" class="section">
             <h3>Contact</h3>
             <h2>Feel free to get in touch on:</h2>
-            <p><a id="profile-link" href="https://github.com/ritaxcorreia" alt="Rita Correia's Github" target="_blank">Github</a></p>
-            <p><a href="https://twitter.com/ritaxcorreia" alt="Rita Correia's Twitter" target="_blank">Twitter</a></p>
+            <ul>
+                <li id="github-icon"><a href="https://github.com/ritaxcorreia" alt="Rita Correia's Github" target="_blank">Github</a></li>
+                <li id="twitter-icon"><a href="https://twitter.com/ritaxcorreia" alt="Rita Correia's Twitter" target="_blank">Twitter</a></li>
+            </ul>
         </section>
     </main>
     <footer>Rita Correia 2020</footer>
