--- a/index.html
+++ b/index.html
@@ -25,30 +25,34 @@
             <h3>These are some of my projects</h3>
             <section class="project-container">
 
-                <section class="project1">
-                    <a href="https://annieeasley.netlify.app/"><img src="https://raw.githubusercontent.com/ritaxcorreia/tribute-page/master/annie-easley.png" alt="Annie Easley Tribute Page"></a>
-                    <p><a class="project-text-link" href="https://annieeasley.netlify.app/"><strong>Tribute
-								Page</strong></a>
-                    </p>
+                <section class="project project1">
+                    <a class="project-text-link" href="https://annieeasley.netlify.app/">
+                        <img src="https://raw.githubusercontent.com/ritaxcorreia/tribute-page/master/annie-easley.png" alt="Annie Easley Tribute Page">
+                        <p>
+                            <strong>Tribute Page</strong>
+                        </p>
+                    </a>
                 </section>
 
-                <section class="project2">
-                    <a href="https://codepen.io/ritacorreia/full/oNbBEmp"><img src="https://raw.githubusercontent.com/ritaxcorreia/Tech-documentation-page/master/tech-doc-page2.png" alt="Technical Documentation Page"></a>
-                    <p><a class="project-text-link" href="https://codepen.io/ritacorreia/full/oNbBEmp"><strong>Technical
-								Documentation Page</strong></a></p>
+                <section class="project project2">
+                    <a class="project-text-link" href="https://codepen.io/ritacorreia/full/oNbBEmp">
+                        <img src="https://raw.githubusercontent.com/ritaxcorreia/Tech-documentation-page/master/tech-doc-page2.png" alt="Technical Documentation Page">
+                        <p><strong>Technical Documentation Page</strong></p>
+                    </a>
                 </section>
 
-                <section class="project3">
-                    <a href="https://codepen.io/ritacorreia/full/rNxjaLo"><img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco_page.png" alt="Product Landing Page"></a>
-                    <p><a class="project-text-link" href="https://codepen.io/ritacorreia/full/rNxjaLo"><strong>Product
-								Landing Page</strong></a></p>
+                <section class="project project3">
+                    <a class="project-text-link" href="https://codepen.io/ritacorreia/full/rNxjaLo">
+                        <img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco_page.png" alt="Product Landing Page">
+                        <p><strong>Product Landing Page</strong></p>
+                    </a>
                 </section>
 
-                <section class="project4">
-                    <a href="https://codepen.io/ritacorreia/full/WNroWPa"><img src="https://raw.githubusercontent.com/ritaxcorreia/survey-form-page/master/survey-form.png" alt="Survey Form Page"></a>
-                    <p><a class="project-text-link" href="https://codepen.io/ritacorreia/full/WNroWPa"><strong>Survey
-								Form
-								Page</strong></a></p>
+                <section class="project project4">
+                    <a class="project-text-link" href="https://codepen.io/ritacorreia/full/WNroWPa">
+                        <img src="https://raw.githubusercontent.com/ritaxcorreia/survey-form-page/master/survey-form.png" alt="Survey Form Page">
+                        <p><strong>Survey Form Page</strong></p>
+                    </a>
                 </section>
             </section>
         </section>
