--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <section class="project project1">
                     <a class="project-text-link" href="https://annieeasley.netlify.app/">
-                        <img src="https://raw.githubusercontent.com/ritaxcorreia/tribute-page/master/annie-easley.png" alt="Annie Easley Tribute Page">
+                        <img src="https://raw.githubusercontent.com/ritaxcorreia/tribute-page/master/annie_700x500.png" alt="Annie Easley Tribute Page">
                         <p>
                             <strong>Tribute Page</strong>
                         </p>
@@ -43,14 +43,14 @@
 
                 <section class="project project3">
                     <a class="project-text-link" href="https://codepen.io/ritacorreia/full/rNxjaLo">
-                        <img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco_page.png" alt="Product Landing Page">
+                        <img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco%20700x500.png" alt="Product Landing Page">
                         <p><strong>Product Landing Page</strong></p>
                     </a>
                 </section>
 
                 <section class="project project4">
                     <a class="project-text-link" href="https://codepen.io/ritacorreia/full/WNroWPa">
-                        <img src="https://raw.githubusercontent.com/ritaxcorreia/survey-form-page/master/survey-form.png" alt="Survey Form Page">
+                        <img src="https://raw.githubusercontent.com/ritaxcorreia/survey-form-page/master/paygap_700x500.png" alt="Survey Form Page">
                         <p><strong>Survey Form Page</strong></p>
                     </a>
                 </section>
