--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </ul>
         </section>
     </main>
-    <footer>Rita Correia 2020</footer>
+    <footer>Rita Correia - For Coding Bootcamp</footer>
 </body>
 
 </html>
