--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="welcome-section" class="section">
             <h1>Hey there, I'm Rita</h1>
             <h2>a web developer in the making</h2>
-            <p>After 10 years in project management, I'm teaching myself how to code. Here's a collection of my very first projects, done as part of a coding bootcamp taken in June 2020.</p>
+            <p>After 10 years in project management, I'm teaching myself how to code. Here's a collection of my very first projects, done as part of a coding bootcamp.</p>
         </section>
 
         <section id="project-area" class="section">
@@ -60,10 +60,8 @@
         <section id="contact" class="section">
             <h3>Contact</h3>
             <h2>Feel free to get in touch on:</h2>
-            <ul>
-                <li id="github-icon"><a href="https://github.com/ritaxcorreia" alt="Rita Correia's Github" target="_blank">Github</a></li>
-                <li id="twitter-icon"><a href="https://twitter.com/ritaxcorreia" alt="Rita Correia's Twitter" target="_blank">Twitter</a></li>
-            </ul>
+            <p><a class="project-text-link" href="https://github.com/ritaxcorreia" alt="Rita Correia's Github" target="_blank">Github</a></p>
+            <p><a class="project-text-link" href="https://twitter.com/ritaxcorreia" alt="Rita Correia's Twitter" target="_blank">Twitter</a></p>
         </section>
     </main>
     <footer>Rita Correia - For Coding Bootcamp</footer>
