--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </section>
 
                 <section class="project project3">
-                    <a class="project-text-link" href="https://codepen.io/ritacorreia/full/rNxjaLo">
+                    <a class="project-text-link" href="https://wandle-product-page.netlify.app">
                         <img src="https://raw.githubusercontent.com/ritaxcorreia/product-landing-page/master/wandleco%20700x500.png" alt="Product Landing Page">
                         <p><strong>Product Landing Page</strong></p>
                     </a>
