--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="welcome-section" class="section">
             <h1>Hey there, I'm Rita</h1>
             <h2>a web developer in the making</h2>
-            <p>After 10 years in project management, I'm teaching myself how to code. Here's a collection of my very first projects, done as part of a coding bootcamp.</p>
+            <p>After 10 years in a non-technical role as a project manager, I'm teaching myself the art of coding again. Here's a collection of my very first projects, done as part of a HTML5 / CSS3 coding bootcamp.</p>
         </section>
 
         <section id="project-area" class="section">
